feat: create mvp of welcome page + declare some config files
- create responsive mvp welcome page with server cridentials;
- move ZOMBOID_* params from docker/.env into ./.env cause app dosent support multiple .env loading (at least with no easy ways).

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,30 @@
     font-weight: normal;
     font-style: normal;
 }
+
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
+
+body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+#app {
+    height: 100%;
+}
+
+* {
+    box-sizing: inherit;
+}
+
+.title {
+    font-size: 36px;
+}
+
+.title--large {
+    font-size: 48px;
+}
