--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,8 @@
+@import "el-input-custom.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 @font-face {
     font-family: 'JustMeAgainDownHere';
@@ -11,18 +12,18 @@
 }
 
 html {
-    height: 100%;
+    height: 100vh;
     box-sizing: border-box;
 }
 
 body {
-    height: 100%;
+    height: 100vh;
     padding: 0;
     margin: 0;
 }
 
 #app {
-    height: 100%;
+    height: 100vh;
 }
 
 * {
@@ -40,13 +41,13 @@ body {
 }
 
 .wrapper {
-    min-height: 100%;
+    min-height: 100vh;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
 
 .darkMode {
-    background-color: rgba(2, 1, 1, 1);
+    /*background-color: rgba(2, 1, 1, 1);*/
     color: white;
 }
 
